objects/IAM_Reclaim_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Assign_Permission_set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if Permission set assigned successfully</description>
        <label>Assign Permission set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if Contact updated successfully</description>
        <label>Contact update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if User created successfully</description>
        <label>Create New User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidanz_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if Guidanz User is Present</description>
        <label>Update Existing Guidanz User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Channel_of_Distribution__c</fullName>
        <label>Channel of Distribution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_New_Username__c</fullName>
        <label>New Username</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Password_Change_User__c</fullName>
        <label>Password Modified by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Password_Time_Stamp__c</fullName>
        <label>Password Time Stamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_WWSPS_Region__c</fullName>
        <label>WWSPS Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDAP_Create_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check call out for LDAP util to create user is successful</description>
        <label>LDAP Create User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDAP_Group_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the necessary group additions in LDAP completed successfully</description>
        <label>LDAP Group Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDAP_Move_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if there is duplicate contact exist with reclaim username</description>
        <label>LDAP Move User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if Reclaim CST Callout successfully returns Promotion Code. Applicable only for users who has CST access</description>
        <label>OPT.CST ID</label>
        <type>Checkbox</type>
    </fields>
    <label>Reclaim Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IAM_New_Username__c</columns>
        <columns>Guidanz_User__c</columns>
        <columns>Create_User__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Assign_Permission_set__c</columns>
        <columns>LDAP_Move_User__c</columns>
        <columns>LDAP_Create_User__c</columns>
        <columns>LDAP_Group_Mapping__c</columns>
        <columns>Contact_update__c</columns>
        <columns>IAM_Password_Time_Stamp__c</columns>
        <columns>IAM_Channel_of_Distribution__c</columns>
        <columns>IAM_Customer_Code__c</columns>
        <columns>IAM_WWSPS_Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>test1006</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Custom_Name</fullName>
        <columns>NAME</columns>
        <columns>IAM_New_Username__c</columns>
        <columns>Contact_update__c</columns>
        <columns>Create_User__c</columns>
        <columns>Assign_Permission_set__c</columns>
        <columns>LDAP_Create_User__c</columns>
        <columns>LDAP_Group_Mapping__c</columns>
        <columns>LDAP_Move_User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_New_Username__c</field>
            <operation>equals</operation>
            <value>rustypatch5@hotmail.com</value>
        </filters>
        <label>Custom Name</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_User_Not_Blank</fullName>
        <columns>NAME</columns>
        <columns>IAM_New_Username__c</columns>
        <columns>Create_User__c</columns>
        <columns>LDAP_Move_User__c</columns>
        <columns>LDAP_Create_User__c</columns>
        <columns>LDAP_Group_Mapping__c</columns>
        <columns>Assign_Permission_set__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_New_Username__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>New User Not Blank</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reclaim_Pilot_OCT_19_20</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) and 6</booleanFilter>
        <columns>NAME</columns>
        <columns>IAM_Customer_Code__c</columns>
        <columns>IAM_New_Username__c</columns>
        <columns>Create_User__c</columns>
        <columns>Guidanz_User__c</columns>
        <columns>Contact_update__c</columns>
        <columns>Assign_Permission_set__c</columns>
        <columns>LDAP_Create_User__c</columns>
        <columns>LDAP_Group_Mapping__c</columns>
        <columns>LDAP_Move_User__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>IAM_Password_Change_User__c</columns>
        <columns>IAM_Password_Time_Stamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>13942</value>
        </filters>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>18430</value>
        </filters>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>22160</value>
        </filters>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>27993</value>
        </filters>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>79219</value>
        </filters>
        <filters>
            <field>IAM_New_Username__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Reclaim Pilot OCT 19 &amp; 20</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reclaim_Pilot_OCT_21_22</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>IAM_Customer_Code__c</columns>
        <columns>IAM_New_Username__c</columns>
        <columns>Create_User__c</columns>
        <columns>Guidanz_User__c</columns>
        <columns>Assign_Permission_set__c</columns>
        <columns>Contact_update__c</columns>
        <columns>LDAP_Create_User__c</columns>
        <columns>LDAP_Group_Mapping__c</columns>
        <columns>LDAP_Move_User__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>IAM_Password_Time_Stamp__c</columns>
        <columns>IAM_Password_Change_User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>19134</value>
        </filters>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>27619</value>
        </filters>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>32952</value>
        </filters>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>34084</value>
        </filters>
        <label>Reclaim Pilot OCT 21&amp;22</label>
    </listViews>
    <listViews>
        <fullName>Reclaimed_Today</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>IAM_New_Username__c</columns>
        <columns>IAM_Customer_Code__c</columns>
        <columns>Guidanz_User__c</columns>
        <columns>Create_User__c</columns>
        <columns>Assign_Permission_set__c</columns>
        <columns>LDAP_Create_User__c</columns>
        <columns>LDAP_Group_Mapping__c</columns>
        <columns>LDAP_Move_User__c</columns>
        <columns>Contact_update__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>IAM_Password_Time_Stamp__c</columns>
        <columns>IAM_Password_Change_User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/9/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>IAM_New_Username__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Reclaimed Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Region_Based</fullName>
        <columns>NAME</columns>
        <columns>IAM_New_Username__c</columns>
        <columns>Assign_Permission_set__c</columns>
        <columns>IAM_Channel_of_Distribution__c</columns>
        <columns>Contact_update__c</columns>
        <columns>Create_User__c</columns>
        <columns>IAM_Customer_Code__c</columns>
        <columns>LDAP_Create_User__c</columns>
        <columns>LDAP_Group_Mapping__c</columns>
        <columns>IAM_Location_Name__c</columns>
        <columns>IAM_WWSPS_Region__c</columns>
        <columns>IAM_Password_Time_Stamp__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_WWSPS_Region__c</field>
            <operation>equals</operation>
            <value>East Asia</value>
        </filters>
        <label>Region Based</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Provide_code</fullName>
        <columns>NAME</columns>
        <columns>IAM_New_Username__c</columns>
        <columns>Assign_Permission_set__c</columns>
        <columns>IAM_Customer_Code__c</columns>
        <columns>IAM_Location_Name__c</columns>
        <columns>IAM_Channel_of_Distribution__c</columns>
        <columns>Contact_update__c</columns>
        <columns>Create_User__c</columns>
        <columns>LDAP_Create_User__c</columns>
        <columns>LDAP_Group_Mapping__c</columns>
        <columns>LDAP_Move_User__c</columns>
        <columns>IAM_Password_Time_Stamp__c</columns>
        <columns>IAM_WWSPS_Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Customer_Code__c</field>
            <operation>equals</operation>
            <value>39217</value>
        </filters>
        <label>Service Provider Code</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Legacy User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reclaim Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>